--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,8 @@
 <div class="container text-white">
   <br/>
   <br/>
-  <h1>Hello</h1>
-  <p></p>
+  <div class="d-flex flex-column align-items-center">
+    <h4>All your files at hand</h4>
+    <%= image_tag("home_img.png")  %>
+  </div>
 </div>
