--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,9 +30,7 @@
             <ul id="navbar-menu" class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
               <li><%= link_to "Home", root_path, class: "nav-link px-2 text-secondary" %></li>
               <li><%= link_to "My Files", directories_path, class: "nav-link px-2 text-white" %></li>
-              <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-              <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-              <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+              <li><%= link_to 'About', about_path, class: 'nav-link px-2 text-white' %></li>
             </ul>
 
             <div class="text-end d-flex">
@@ -69,9 +67,7 @@
           <ul class="nav col-md-4 justify-content-end">
             <li class="nav-item"><%= link_to "Home", root_path, class: "nav-link px-2 text-white" %></li>
             <li class="nav-item"><%= link_to "My Files", directories_path, class: "nav-link px-2 text-white" %></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-white">About</a></li>
+            <li><%= link_to 'About', about_path, class: 'nav-link px-2 text-white' %></li>
           </ul>
         </footer>
       </div>
