--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= javascript_include_tag 'rails-ujs' %>
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%#= javascript_include_tag "/assets/application.js", "data-turbo-track": "reload", defer: true %>
+    <%= stylesheet_link_tag "application", "data-turbolinks-track": "reload" %>
+    <%= javascript_include_tag "application", "data-turbolinks-track": "reload", defer: true %>
     <%= favicon_link_tag asset_path('jelly.png') %>
   </head>
 
