--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,5 +14,5 @@
  /**= require_self*/
  /**!*/
 
-@import "bootstrap/scss/bootstrap";
-@import "**/*";
+/*/!*=require "bootstrap/scss/bootstrap";*/
+/*/!*=require "**!*";*/
